src/ui/readarr_ui/library/snapshots/managarr__ui__readarr_ui__library__author_details_ui__author_details_ui_tests__tests__snapshot_tests__author_details_ui_renders_automatic_search_prompt_over_author_details.snap
---
source: src/ui/readarr_ui/library/author_details_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
        ╭  Test Author  ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮        
        │Author: Test Author                                                                                                                                │        
        │Overview: some interesting description of the author                                                                                               │        
        │Status: Continuing                                                                                                                                 │        
        │Genres: science fiction                                                                                                                            │        
        │Rating: N/A                                                                                                                                        │        
        │Path: /nfs/books/Test Author                                                                                                                       │        
        │Quality Profile: Standard                                                                                                                          │        
        │Metadata Profile: Standard                                                                                                                         │        
        │Monitored: Yes                                                                                                                                     │        
        │                                                                                                                                                   │        
        │                                                                                                                                                   │        
        │                                                                                                                                                   │        
        │╭  Author Details  ───────────────────────╭────────────────  Automatic Author Search  ────────────────╮───────────────────────────────────────────╮│        
        ││ Books │ History │ Author Search         │Do you want to trigger an automatic search of your indexers│                                           ││        
        ││─────────────────────────────────────────│  for all monitored book(s) for the author: Test Author?   │───────────────────────────────────────────││        
        ││   Monitored      Title                  │                                                           │Date             Size                      ││        
        ││=> 🏷              Test Book              │                                                           │20               0.00 GB                   ││        
        ││                                         │                                                           │                                           ││        
        ││                                         │                                                           │                                           ││        
        ││                                         │                                                           │                                           ││        
        ││                                         │                                                           │                                           ││        
        ││                                         │                                                           │                                           ││        
        ││                                         │                                                           │                                           ││        
        ││                                         │                                                           │                                           ││        
        ││                                         │                                                           │                                           ││        
        ││                                         │                                                           │                                           ││        
        ││                                         │╭────────────────────────────╮╭───────────────────────────╮│                                           ││        
        ││                                         ││             Yes            ││            No             ││                                           ││        
        ││                                         │╰────────────────────────────╯╰───────────────────────────╯│                                           ││        
        ││                                         ╰───────────────────────────────────────────────────────────╯                                           ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        │╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯│        
        ╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
