src/ui/readarr_ui/library/snapshots/managarr__ui__readarr_ui__library__author_details_ui__author_details_ui_tests__tests__snapshot_tests__author_details_ui_renders_book_details_over_author_details.snap
---
source: src/ui/readarr_ui/library/author_details_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
        ╭  Test Author  ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮        
        │Auth╭  Test Book Details  ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮      │        
        │Stat│ Editions │ History │ File │ Manual Search                                                                                             │      │        
        │Genr│───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│      │        
        │Rati│   Format             ISBN13              ASIN               Publisher                 Page Count     Release Date        Monitored    │      │        
        │Path│=> Hardcover          9780756404079       B0043RSJ9S         DAW Books                 288            2023-05-20          🏷            │      │        
        │Qual│                                                                                                                                       │      │        
        │Meta│                                                                                                                                       │      │        
        │Moni│                                                                                                                                       │      │        
        │Over│                                                                                                                                       │im    │        
        │seve│                                                                                                                                       │      │        
        │    │                                                                                                                                       │      │        
        │    │                                                                                                                                       │      │        
        │╭  A│                                                                                                                                       │─────╮│        
        ││ Bo│                                                                                                                                       │     ││        
        ││───│                                                                                                                                       │─────││        
        ││   │                                                                                                                                       │     ││        
        ││=> │                                                                                                                                       │     ││        
        ││   │                                                                                                                                       │     ││        
        ││   │                                                                                                                                       │     ││        
        ││   │                                                                                                                                       │     ││        
        ││   │                                                                                                                                       │     ││        
        ││   │                                                                                                                                       │     ││        
        ││   │                                                                                                                                       │     ││        
        ││   │                                                                                                                                       │     ││        
        ││   │                                                                                                                                       │     ││        
        ││   │                                                                                                                                       │     ││        
        ││   │                                                                                                                                       │     ││        
        ││   │                                                                                                                                       │     ││        
        ││   │                                                                                                                                       │     ││        
        ││   │                                                                                                                                       │     ││        
        ││   │                                                                                                                                       │     ││        
        ││   │                                                                                                                                       │     ││        
        ││   │                                                                                                                                       │     ││        
        ││   │                                                                                                                                       │     ││        
        ││   │                                                                                                                                       │     ││        
        ││   │                                                                                                                                       │     ││        
        ││   │                                                                                                                                       │     ││        
        ││   │                                                                                                                                       │     ││        
        ││   │                                                                                                                                       │     ││        
        ││   │                                                                                                                                       │     ││        
        ││   │                                                                                                                                       │     ││        
        ││   ╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯     ││        
        │╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯│        
        ╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
